tests/errors/guard-inexact.expect
---CODE---
1
---STDERR---
error: Ports used in guards must have exact guarantees
  ┌─ tests/errors/guard-inexact.fil:7:9
  │
7 │   out = sel ? left;
  │         ^^^ Port provides guarantee @[G, G+1].

